Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.25
* Fixed internal server errors on LedgerSMB->error() during new() (Chris T)

Changelog for 1.3.24
* Fixed error in msgid for "Add Language" (Havard S, h/t Robert C)
* Moved Makefile.PL to version_from to reduce errors (Chris T, h/t Robert C)
* Prompts added to configure_apache.sh (Berend T)
* Corrected image not showable on html invoice (Chris T)
* Fixed invoice date not printing on checks (Chris T, h/t Neil S)
* Changed INSTALL to do make test, not of make install (Chris T h/t Kevin B)
* Fixed framework for printing parts tumbnails in invoices (Chris T)
* Upgrade now handles nulls in model field of makemodel (Chris T)
* Fixed issue with comment in account.sql (Chris T)
* Removed unused Subcontractor GIFI field (Chris T, h/t Erik H)
* Changed upgrade screen to pull AR/AP numbers (Erik H)
* Rebuild modules after upgrade, ensuring upgrade to latest version (Chris T)
* Fixed credit limit usage calculations (Chris T, h/t Erik H)
* Fixes to get LedgerSMB running clearly using FCGI (Chris T)
* Fixed unapproved transactions showing up on aging reports (Chris T)
* Fixed new window menu item not showing up (Erik H)
* Fixed alignment issue on Contact screen on Chrome (Chris T)
* Fixed cannot reconcile account with negative balance(Havard S, Erik H, h/t Nick P,3586757)
* Documented cache_templates option in ledgersmb.conf (Chris T)
* Fixed internal server error on plack with backups (Chris T)
* Added add user button to setup.pl when LedgerSMB 1.3 db detected (Chris T)
* Backup buttons do not show when no db found (Chris T)

Berend T is Berend Tober
Chris T is Chris Travers
Erik H is Erik Huelsmann
Havard S is Havard Sorli
Kevin B is Kevin Bailey
Neil S is Neil Smith
Robert C is Robert James Clay
Nick P is Nick Prater

Changelog for 1.3.23
* Fixed query string/stdin handling where both stdin and query string are set